# ParallelProgramming

./: .gitignore  CMakeLists.txt  IMPLEMENTED_PARALLELISM.md  Makefile  README.md  benchmark_sobel  benchmark_sobel_cuda  build_benchmark_cuda.sh  lp_main  lp_main_cuda  lp_main_openmp  lp_main_simd  test_onnx_models
Main/: LPDetector.cpp  LPDetector.h  LPOCR.cpp  LPOCR.h  Pipeline.cpp  Pipeline.h  SobelCuda.h  benchmark_sobel.cpp  benchmark_sobel_cuda.cpp  export_torchscript.py  main.cpp  run_models.py
Report/: README.md  fix_vietnamese.tex  install_latex.sh  main.tex
cuda/: sobel_cuda.cu  sobel_cuda.h
docs/: BAO_CAO_DANH_GIA.md  IMAGE_PROCESSING_EXPLANATION.md  PARALLELISM.md  PARALLEL_OPTIMIZATION_IDEAS.md  PARALLEL_PIPELINE_EXPLANATION.md  PERFORMANCE_COMPARISON.md  PROJECT_STRUCTURE.md  QUYET_DINH_CUDA.md  README_BUILD.md  benchmark_results.txt
docs/Report/: Makefile  README.md  main.tex
include/: LPDetector.h  LPOCR.h  Pipeline.h  SobelSIMD.h  config.h  image_processing.h  license_plate_detector.h  parallel_pipeline.h  rtsp_client.h  types.h  utils.h
models/: bestDetect.pt  convert.py
report/: Makefile  README.md  main.tex
scripts/: BENCHMARK_README.md  HUONG_DAN_CHAY.md  README_BENCHMARK.md  benchmark.sh  build.sh  build_benchmark_cuda.sh  build_no_cuda.sh  build_openmp.sh  build_simd.sh  collect_metrics.sh  create_evaluation_report.sh  display_benchmark.py  export_torchscript.py  generate_report.sh  rtsp_bridge.sh  run_all_methods.sh  run_test_onnx.sh
src/: LPDetector.cpp  LPOCR.cpp  Pipeline.cpp  SobelCuda.cu  SobelSIMD.cpp  config.cpp  image_processing.cpp  license_plate_detector.cpp  main.cpp  parallel_pipeline.cpp  rtsp_client.cpp  utils.cpp
